Feat: The VariableTokenizer will now also respect the VariablePattern